fix: adjust api spec to handle has many devices and make model for device
