# internal/model/domain/user.go
@@ -8,4 +8,5 @@ type User struct {
 	Username string `gorm:"uniqueIndex;not null;size:50;"`
 	Password string `gorm:"not null;"`
 	Name    string `gorm:"size:50;"`
+	Devices []Device
 }
